--- a/Rules
+++ b/Rules
@@ -4,17 +4,12 @@ preprocess do
   Toc.instance.prepare @items, SECTION_CONFIG
 end
 
-
 compile '/bootstrap/**/*' do
   nil
 end
 
-compile '/content/scripts/**/*' do
+compile '/extras/**/*' do
   nil
-end
-
-compile "/content/tipuesearch/tipuesearch_content.js.erb" do
-  filter :erb
 end
 
 compile '/**/*.ical.erb' do
@@ -23,11 +18,41 @@ end
 
 compile '/**/*.{md,ical}.erb' do
   if item[:status] != "hidden"
+    filter :handle_shortcodes
     filter :erb
-#    filter :redcarpet, options: { fenced_code_blocks: true }
     filter :kramdown, coderay_line_numbers: nil
-#    filter :colorize_syntax, default_colorizer: :rouge
     layout '/course.*'
+  else
+    nil
+  end
+end
+
+compile '/**/*.md.erb', rep: :slides do
+  if item[:status] != "hidden"
+    filter :handle_shortcodes
+    filter :erb
+    layout '/slides.*'
+    write item.identifier.without_ext + '/slides.html'
+  else
+    nil
+  end
+end
+
+compile '/**/*/*.cg' do
+  if item[:status] != "hidden"
+    filter :handle_shortcodes
+    filter :kramdown, coderay_line_numbers: nil
+    layout '/course.*'
+  else
+    nil
+  end
+end
+
+compile '/**/*.cg', rep: :slides do
+  if item[:status] != "hidden"
+    filter :handle_shortcodes
+    layout '/slides.*'
+    write item.identifier.without_ext + '/slides.html'
   else
     nil
   end
@@ -43,22 +68,17 @@ route '/bootstrap/**/*' do
   @item.identifier.to_s
 end
 
-route '/tipuesearch/**/*' do
-  @item.identifier.to_s
-end
-
-route "/content/tipuesearch/tipuesearch_content.*" do
-  '/tipuesearch/tipuesearch_content.js'
-end
-
-# Output the search page
-route '/tipuesearch/search.md.erb' do
-  '/tipuesearch/search/index.html'
-end
-
 # Select which .md.erb becomes the home page of the site
 route HOME_PAGE do
   '/index.html'
+end
+
+route HOME_PAGE, rep: :slides do
+  '/slides.html'
+end
+
+route SECRET_PAGE do
+  '/secret.html'
 end
 
 route '/**/*' do
@@ -66,8 +86,6 @@ route '/**/*' do
     raise RuntimeError, "Missing required extension: \".#{item.identifier}\""
   elsif item.binary?
     item.identifier.to_s
-  elsif item.identifier == "/searchtipuesearch_content/"
-    item.identifier.chop + '.' + item[:extension] rescue fail "in route * in Rules"
   elsif item[:status] == "hidden"
     nil
   elsif item[:type] == "subsection"
