--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
     "cSpell.words": [
+        "activerecord",
+        "autorun",
         "callout",
+        "Cosi",
         "Pito",
-        "pitofaq"
+        "pitofaq",
+        "prework",
+        "psql",
+        "Rakefile",
+        "waitlist"
     ]
 }
