--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Cosi",
         "Pito",
         "pitofaq",
+        "pitosalas",
         "prework",
         "psql",
         "Rakefile",
