--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "activerecord",
         "autorun",
+        "bigtitle",
         "callout",
         "Cosi",
         "Pito",
@@ -10,6 +11,7 @@
         "prework",
         "psql",
         "Rakefile",
+        "testuser",
         "waitlist"
     ]
 }
