--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,14 @@
         "bigtitle",
         "callout",
         "Cosi",
+        "denormalize",
+        "nanotwitter",
         "Pito",
         "pitofaq",
         "pitosalas",
         "prework",
         "psql",
+        "Rackup",
         "Rakefile",
         "testuser",
         "waitlist"
