--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "callout",
         "Cosi",
         "denormalize",
+        "gradescope",
         "nanotwitter",
         "Pito",
         "pitofaq",
