--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,9 @@
         "Cosi",
         "denormalize",
         "gradescope",
+        "Microservices",
         "nanotwitter",
+        "Parnas",
         "Pito",
         "pitofaq",
         "pitosalas",
